Fixed css links and added hover to header

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -8,8 +8,8 @@
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- Custom styles -->
-    <link href="../css/headers.css" rel="stylesheet">
-    <link href="../css/format.css" rel="stylesheet">
+    <link href="css/headers.css" rel="stylesheet">
+    <link href="css/format.css" rel="stylesheet">
 </head>
 
 <body>
@@ -24,11 +24,11 @@
                 </a>
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="#" class="nav-link px-2 text-primary fw-bold hoverable">Home</a></li>
-                    <li><a href="html/accessories.html" class="nav-link px-2 text-white">Accessories</a></li>
-                    <li><a href="html/dogs.html" class="nav-link px-2 text-white">Dogs</a></li>
-                    <li><a href="html/cats.html" class="nav-link px-2 text-white">Cats</a></li>
-                    <li><a href="html/about.html" class="nav-link px-2 text-white">About</a></li>
+                    <li><a href="" class="nav-link px-2 fw-bold">Home</a></li>
+                    <li><a href="html/accessories.html" class="nav-link px-2">Accessories</a></li>
+                    <li><a href="html/dogs.html" class="nav-link px-2">Dogs</a></li>
+                    <li><a href="html/cats.html" class="nav-link px-2">Cats</a></li>
+                    <li><a href="html/about.html" class="nav-link px-2">About</a></li>
                 </ul>
 
                 <div class="text-end">
@@ -46,7 +46,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img">
                     <!-- insert logo here -->
                 </svg>
-                <span class="fs-4">Welcome to PetShop</span>
+                <span class="fs-4">Welcome to Shop Do Pet</span>
             </div>
         </header>
 
