--- a/mockup/html/about.html
+++ b/mockup/html/about.html
@@ -14,20 +14,21 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header class="p-3 bg-info text-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                        <use xlink:href="#bootstrap" /></svg>
+                <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
+                        <!-- insert logo here -->
+                    </svg>
                 </a>
-
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="../index.html" class="nav-link px-2 text-white">Home</a></li>
-                    <li><a href="accessories.html" class="nav-link px-2 text-white">Accessories</a></li>
-                    <li><a href="dogs.html" class="nav-link px-2 text-white">Dogs</a></li>
-                    <li><a href="cats.html" class="nav-link px-2 text-white">Cats</a></li>
-                    <li><a href="#" class="nav-link px-2 text-primary fw-bold">About</a></li>
+                    <li><a href="../index.html" class="nav-link px-2">Home</a></li>
+                    <li><a href="accessories.html" class="nav-link px-2">Accessories</a></li>
+                    <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
+                    <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
+                    <li><a href="" class="nav-link px-2 fw-bold">About</a></li>
                 </ul>
 
                 <div class="text-end">
