--- a/mockup/html/cats.html
+++ b/mockup/html/cats.html
@@ -43,7 +43,10 @@
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Cat Products</h1>
-                <p class="lead fs-4 text-muted">Here you will find a variety of items for your cats.</p>
+                <p class="lead fs-5 text-muted">Here you will find a variety of items for your cats
+                    <br>From Cat Food to Scratcher
+                    <br>Make your kitty the cutest kitty of the kittens with our cats costumes 
+                </p>
             </div>
         </div>
     </section>
