--- a/mockup/html/dogs.html
+++ b/mockup/html/dogs.html
@@ -44,7 +44,11 @@
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Dog Products</h1>
-                <p class="lead fs-4 text-muted">Here you will find a variety of items for your dogs.</p>
+                <p class="lead fs-5 text-muted">Here you will find a variety of items for your dogs
+                    <br>From Dog Food to Collar
+                    <br>You may even find something you never though about to buy
+                    <br>Make your best friend even happier to be your friend :)
+                </p>
             </div>
         </div>
     </section>
