Title icon/logo

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>Home</title>
+    <link rel="shortcut icon" type="image/svg" href="../mockup/images/favicon.ico.svg">
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- Custom styles -->
@@ -46,7 +47,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="32" class="me-2" viewBox="0 0 118 94" role="img">
                     <!-- insert logo here -->
                 </svg>
-                <span class="fs-4">Welcome to Shop Do Pet</span>
+                <span class="fs-4">Welcome to Shop do Pet</span>
             </div>
         </header>
 
