Formataçao da pagina About us, retirada do about do header

--- a/mockup/html/about.html
+++ b/mockup/html/about.html
@@ -28,16 +28,42 @@
                     <li><a href="accessories.html" class="nav-link px-2">Accessories</a></li>
                     <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
-                    <li><a href="" class="nav-link px-2 fw-bold">About</a></li>
                 </ul>
 
                 <div class="text-end">
                     <button type="button" class="btn btn-outline-light me-2">Login</button>
-                    <button type="button" class="btn btn-dark">Sign-up</button>
+                    <button type="button" class="btn btn-dark">Sign up</button>
                 </div>
             </div>
         </div>
     </header>
+
+    <div class="container py-4">
+        <header class="pb-3 mb-4 border-bottom">
+            <div class="d-flex align-items-center text-dark text-decoration-none">
+                <span class="fs-4">About Shop do Pet</span>
+            </div>
+        </header>
+
+        <div class="row align-items-md-stretch">
+            <div class="col-md-6" style="text-align: justify;">
+                <h1 class="fs-4">Who are we?</h1>
+                <p>We are a group of students coursing Computer Science in University of São Paulo - USP, campus São Carlos. Our names are: Dennis Green, Filipe Oliveira, Gabriel Rosati and Pedro Cisdeli.</p>
+                <h1 class="fs-4">Purpose</h1>
+                <p><i>Shop do Pet</i> is an activity from Introduction to Web Development classes that seeks to familiarize students with programming for web platforms by teaching languages such as: HTML, CSS, JavaScript, among others.</p>
+                <h1 class="fs-4">Our Goals</h1>
+                <p>Making a usefull website that emulates a online Pet Shop, programming front and back-end.</p>
+            </div>
+            <div class="col-md-6" >
+                
+                <svg class="bi me-2" width="150" height="130" role="img" aria-label="Logo">
+                    <img src="../images/usp_logo.svg" width="200"/>
+                </svg>
+                
+            </div>
+        </div>
+
+    </div>
 
     <!-- Footer -->
     <footer class="pt-3 mt-4 border-top bg-light">
