--- a/mockup/html/accessories.html
+++ b/mockup/html/accessories.html
@@ -28,12 +28,11 @@
                     <li><a href="#" class="nav-link px-2 fw-bold">Accessories</a></li>
                     <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
-                    <li><a href="about.html" class="nav-link px-2">About</a></li>
                 </ul>
 
                 <div class="text-end">
                     <button type="button" class="btn btn-outline-light me-2">Login</button>
-                    <button type="button" class="btn btn-dark">Sign-up</button>
+                    <button type="button" class="btn btn-dark">Sign up</button>
                 </div>
             </div>
         </div>
