--- a/mockup/index.html
+++ b/mockup/index.html
@@ -29,12 +29,11 @@
                     <li><a href="html/accessories.html" class="nav-link px-2">Accessories</a></li>
                     <li><a href="html/dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="html/cats.html" class="nav-link px-2">Cats</a></li>
-                    <li><a href="html/about.html" class="nav-link px-2">About</a></li>
                 </ul>
 
                 <div class="text-end">
                     <button type="button" class="btn btn-outline-light me-2">Login</button>
-                    <button type="button" class="btn btn-dark">Sign-up</button>
+                    <button type="button" class="btn btn-dark">Sign up</button>
                 </div>
             </div>
         </div>
