Minor changes to some texts

--- a/mockup/html/about.html
+++ b/mockup/html/about.html
@@ -48,18 +48,18 @@
         <div class="row align-items-md-stretch">
             <div class="col-md-6" style="text-align: justify;">
                 <h1 class="fs-4">Who are we?</h1>
-                <p>We are a group of students coursing Computer Science in University of São Paulo - USP, campus São Carlos. Our names are: Dennis Green, Filipe Oliveira, Gabriel Rosati and Pedro Cisdeli.</p>
+                <p>We are a group of Computer Science students from University of São Paulo - USP, campus São Carlos. Our names are: Dennis Green, Filipe Oliveira, Gabriel Rosati and Pedro Cisdeli.</p>
                 <h1 class="fs-4">Purpose</h1>
-                <p><i>Shop do Pet</i> is an activity from Introduction to Web Development classes that seeks to familiarize students with programming for web platforms by teaching languages such as: HTML, CSS, JavaScript, among others.</p>
+                <p><i>Shop do Pet</i> is a group assignment from Introduction to Web Development classes that seeks to familiarize students with programming for web platforms by teaching languages such as: HTML, CSS, JavaScript, among others.</p>
                 <h1 class="fs-4">Our Goals</h1>
-                <p>Making a usefull website that emulates a online Pet Shop, programming front and back-end.</p>
+                <p>Develop a usefull website that emulates an online Pet Shop.</p>
             </div>
             <div class="col-md-6" >
-                
+
                 <svg class="bi me-2" width="150" height="130" role="img" aria-label="Logo">
                     <img src="../images/usp_logo.svg" width="200"/>
                 </svg>
-                
+
             </div>
         </div>
 
