--- a/mockup/html/cats.html
+++ b/mockup/html/cats.html
@@ -44,8 +44,8 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Cat Products</h1>
                 <p class="lead fs-5 text-muted">Here you will find a variety of items for your cats
-                    <br>From Cat Food to Scratcher
-                    <br>Make your kitty the cutest kitty of the kittens with our cats costumes 
+                    <br>From cat food to scratchers
+                    <br>Make your kitty the cutest kitty of the kittens with our cats costumes
                 </p>
             </div>
         </div>
