--- a/mockup/html/accessories.html
+++ b/mockup/html/accessories.html
@@ -43,8 +43,8 @@
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Custom Accessories</h1>
-                <p class="lead fs-5 text-muted">Here you will find a variety of items for your loved ones
-                    <br>For the ones who really love their pets
+                <p class="lead fs-5 text-muted">Here you will find a variety of items for your loved ones.
+                    <br>For the ones who really care about their pets
                     <br>Only the crème de la crème for your little puppies and kittens
                 </p>
             </div>
