--- a/mockup/html/dogs.html
+++ b/mockup/html/dogs.html
@@ -45,9 +45,8 @@
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Dog Products</h1>
                 <p class="lead fs-5 text-muted">Here you will find a variety of items for your dogs
-                    <br>From Dog Food to Collar
-                    <br>You may even find something you never though about to buy
-                    <br>Make your best friend even happier to be your friend :)
+                    <br>From dog food to treats
+                    <br>Making your best friend even happier to be with you! :)
                 </p>
             </div>
         </div>
