Fixed links from paw logo in header

--- a/mockup/html/about.html
+++ b/mockup/html/about.html
@@ -18,7 +18,7 @@
     <header class="p-3 bg-info text-white">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
                         <img id="logo" src="../images/paw.svg"/>
                     </svg>
@@ -55,7 +55,6 @@
                 <p>Develop a usefull website that emulates an online Pet Shop.</p>
             </div>
             <div class="col-md-6" >
-
                 <svg class="bi me-2" width="150" height="130" role="img" aria-label="Logo">
                     <img src="../images/usp_logo.svg" width="200"/>
                 </svg>
