--- a/mockup/html/about.html
+++ b/mockup/html/about.html
@@ -5,11 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>About</title>
-    <link rel="shortcut icon" type="image/svg" href="../images/favicon.ico.svg">
+    <link rel="shortcut icon" type="image/svg" href="../images/paw.svg">
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <!-- Custom styles for this template -->
+    <!-- Custom CSS -->
     <link href="../css/headers.css" rel="stylesheet">
+    <link href="../css/logos.css" rel="stylesheet">
     <link href="../css/format.css" rel="stylesheet">
 </head>
 
@@ -20,7 +21,7 @@
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="../index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
-                        <img id="logo" src="../images/paw.svg"/>
+                        <img id="headerLogo" src="../images/paw.svg" />
                     </svg>
                 </a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -54,9 +55,9 @@
                 <h1 class="fs-4">Our Goals</h1>
                 <p>Develop a usefull website that emulates an online Pet Shop.</p>
             </div>
-            <div class="col-md-6" >
+            <div class="col-md-6">
                 <svg class="bi me-2" width="150" height="130" role="img" aria-label="Logo">
-                    <img src="../images/usp_logo.svg" width="200"/>
+                    <img src="../images/usp_logo.svg" width="200" />
                 </svg>
 
             </div>
