--- a/mockup/index.html
+++ b/mockup/index.html
@@ -8,8 +8,9 @@
     <link rel="shortcut icon" type="image/svg" href="../mockup/images/paw.svg">
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <!-- Custom styles -->
+    <!-- Custom CSS -->
     <link href="css/headers.css" rel="stylesheet">
+    <link href="css/logos.css" rel="stylesheet">
     <link href="css/format.css" rel="stylesheet">
 </head>
 
@@ -20,7 +21,7 @@
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <a href="" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Logo">
-                        <img id="logo" src="images/paw.svg"/>
+                        <img id="headerLogo" src="images/paw.svg" />
                     </svg>
                 </a>
 
