Create the login and the sign up pages

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -32,8 +32,8 @@
                 </ul>
 
                 <div class="text-end">
-                    <button type="button" class="btn btn-outline-light me-2">Login</button>
-                    <button type="button" class="btn btn-dark">Sign up</button>
+                    <a href="html/login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
+                    <a href="html/sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
                 </div>
             </div>
         </div>
