--- a/mockup/html/cats.html
+++ b/mockup/html/cats.html
@@ -31,8 +31,8 @@
                 </ul>
 
                 <div class="text-end">
-                    <button type="button" class="btn btn-outline-light me-2">Login</button>
-                    <button type="button" class="btn btn-dark">Sign up</button>
+                    <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
+                    <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
                 </div>
             </div>
         </div>
@@ -251,7 +251,7 @@
                 <div class="col-6 col-md">
                     <h5>About</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="link-secondary" href="html/about.html"><i class="fa fa-bookmark fa-fw"></i>About us</a></li>
+                        <li><a class="link-secondary" href="about.html"><i class="fa fa-bookmark fa-fw"></i>About us</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
