--- a/mockup/html/accessories.html
+++ b/mockup/html/accessories.html
@@ -309,7 +309,7 @@
                 <div class="col-6 col-md">
                     <h5>About</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="link-secondary" href="html/about.html"><i class="fa fa-bookmark fa-fw"></i>About us</a></li>
+                        <li><a class="link-secondary" href="../html/about.html"><i class="fa fa-bookmark fa-fw"></i>About us</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
