--- a/mockup/index.html
+++ b/mockup/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link href="css/headers.css" rel="stylesheet">
+    <link href="css/jumbotron.css" rel="stylesheet">
     <link href="css/logos.css" rel="stylesheet">
     <link href="css/format.css" rel="stylesheet">
 </head>
@@ -61,7 +62,8 @@
 
         <div class="row align-items-md-stretch">
             <div class="col-md-6">
-                <div class="h-100 p-5 text-white bg-dark rounded-3">
+                <div id="dogJumbo" class="h-100 p-5 text-white bg-dark rounded-3">
+                    <!-- <img src="images/dog.jpg" alt="Dog_Photo"> -->
                     <h2>Dog items</h2>
                     <p>Shop items for your best friend!</p>
                     <a class="btn btn-primary" href="html/dogs.html" role="button">Take me there</a>
