--- a/mockup/html/accessories.html
+++ b/mockup/html/accessories.html
@@ -12,6 +12,7 @@
     <link href="../css/headers.css" rel="stylesheet">
     <link href="../css/logos.css" rel="stylesheet">
     <link href="../css/format.css" rel="stylesheet">
+    <link href="../css/accessories.css" rel="stylesheet">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                     <li><a href="dogs.html" class="nav-link px-2">Dogs</a></li>
                     <li><a href="cats.html" class="nav-link px-2">Cats</a></li>
                 </ul>
-                
+
                 <div class="text-end">
                     <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Login</button></a>
                     <a href="sign_up.html"><button type="button" class="btn btn-dark">Sign up</button></a>
@@ -40,17 +41,19 @@
     </header>
 
     <!-- Top -->
-    <section class="py-5 text-center container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">Custom Accessories</h1>
-                <p class="lead fs-5 text-muted">Here you will find a variety of items for your loved ones.
-                    <br>For the ones who really care about their pets
-                    <br>Only the crème de la crème for your little puppies and kittens
-                </p>
+    <div id="accPhoto">
+        <section class="py-5 text-center container">
+            <div class="row py-lg-5">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1 class="fw-light text-white">Custom Accessories</h1>
+                    <p class="lead fs-5 text-white">Here you will find a variety of items for your loved ones.
+                        <br>For the ones who really care about their pets
+                        <br>Only the crème de la crème for your little puppies and kittens
+                    </p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <!-- Products -->
     <div class="album py-5 bg-light">
@@ -318,6 +321,7 @@
                         <li><a class="link-secondary" href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
                         <li><a class="link-secondary" href="https://jquery.com/" target="_blank">Jquery</a></li>
                         <li><a class="link-secondary" href="https://fontawesome.com/" target="_blank">Font Awesome</a></li>
+                        <li><a class="link-secondary" href="https://www.freepik.com/photos/pets" target="_blank">Pets photo created by freepik</a></li>
                     </ul>
                 </div>
             </div>
