--- a/mockup/html/cats.html
+++ b/mockup/html/cats.html
@@ -12,6 +12,7 @@
     <link href="../css/headers.css" rel="stylesheet">
     <link href="../css/logos.css" rel="stylesheet">
     <link href="../css/format.css" rel="stylesheet">
+    <link href="../css/cats.css" rel="stylesheet">
 </head>
 
 <body>
@@ -40,17 +41,19 @@
     </header>
 
     <!-- Top -->
-    <section class="py-5 text-center container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">Cat Products</h1>
-                <p class="lead fs-5 text-muted">Here you will find a variety of items for your cats
-                    <br>From cat food to scratchers
-                    <br>Make your kitty the cutest kitty of the kittens with our cats costumes
-                </p>
+    <div id="catPhoto">
+        <section class="py-5 text-center container">
+            <div class="row py-lg-5">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1 class="fw-light text-white">Cat Products</h1>
+                    <p class="lead fs-5 text-white">Here you will find a variety of items for your cats
+                        <br>From cat food to scratchers
+                        <br>Make your kitty the cutest kitty of the kittens with our cats costumes
+                    </p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <!-- Products -->
     <div class="album py-5 bg-light">
@@ -261,6 +264,7 @@
                         <li><a class="link-secondary" href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
                         <li><a class="link-secondary" href="https://jquery.com/" target="_blank">Jquery</a></li>
                         <li><a class="link-secondary" href="https://fontawesome.com/" target="_blank">Font Awesome</a></li>
+                        <li><a class="link-secondary" href="https://www.freepik.com/photos/pets" target="_blank">Pets photo created by freepik</a></li>
                     </ul>
                 </div>
             </div>
