--- a/mockup/html/dogs.html
+++ b/mockup/html/dogs.html
@@ -12,6 +12,7 @@
     <link href="../css/headers.css" rel="stylesheet">
     <link href="../css/logos.css" rel="stylesheet">
     <link href="../css/format.css" rel="stylesheet">
+    <link href="../css/dogs.css" rel="stylesheet">
 </head>
 
 <body>
@@ -41,17 +42,19 @@
 
 
     <!-- Top -->
-    <section class="py-5 text-center container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">Dog Products</h1>
-                <p class="lead fs-5 text-muted">Here you will find a variety of items for your dogs
-                    <br>From dog food to treats
-                    <br>Making your best friend even happier to be with you! :)
-                </p>
+    <div id="dogPhoto">
+        <section class="py-5 text-center container">
+            <div class="row py-lg-5">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1 class="fw-light text-white">Dog Products</h1>
+                    <p class="lead fs-5 text-white">Here you will find a variety of items for your dogs
+                        <br>From dog food to treats
+                        <br>Making your best friend even happier to be with you! :)
+                    </p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <!-- Products -->
     <div class="album py-5 bg-light">
@@ -262,6 +265,7 @@
                         <li><a class="link-secondary" href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
                         <li><a class="link-secondary" href="https://jquery.com/" target="_blank">Jquery</a></li>
                         <li><a class="link-secondary" href="https://fontawesome.com/" target="_blank">Font Awesome</a></li>
+                        <li><a class="link-secondary" href="https://www.freepik.com/photos/pets" target="_blank">Pets photo created by freepik</a></li>
                     </ul>
                 </div>
             </div>
