--- a/mockup/index.html
+++ b/mockup/index.html
@@ -52,25 +52,24 @@
             </div>
         </header>
 
-        <div class="p-5 mb-4 bg-light border rounded-3">
-            <div class="container-fluid py-5">
+        <div id="accJumbo" class="p-5 mb-4 bg-light border rounded-3">
+            <div  class="container-fluid py-5 text-white">
                 <h1 class="display-5 fw-bold">Custom Accessories</h1>
                 <p class="col-md-8 fs-4">Checkout our custom acessories for your pet!</p>
-                <a class="btn btn-secondary" href="html/accessories.html" role="button">Take me there</a>
+                <a class="btn btn-primary" href="html/accessories.html" role="button">Take me there</a>
             </div>
         </div>
 
         <div class="row align-items-md-stretch">
             <div class="col-md-6">
                 <div id="dogJumbo" class="h-100 p-5 text-white bg-dark rounded-3">
-                    <!-- <img src="images/dog.jpg" alt="Dog_Photo"> -->
                     <h2>Dog items</h2>
                     <p>Shop items for your best friend!</p>
                     <a class="btn btn-primary" href="html/dogs.html" role="button">Take me there</a>
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="h-100 p-5 bg-light border rounded-3">
+                <div id="catJumbo" class="h-100 p-5 bg-light text-white border rounded-3">
                     <h2>Cat items</h2>
                     <p>Shop items for your kitten.</p>
                     <a class="btn btn-primary" href="html/cats.html" role="button">Take me there</a>
@@ -106,6 +105,7 @@
                         <li><a class="link-secondary" href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
                         <li><a class="link-secondary" href="https://jquery.com/" target="_blank">Jquery</a></li>
                         <li><a class="link-secondary" href="https://fontawesome.com/" target="_blank">Font Awesome</a></li>
+                        <li><a class="link-secondary" href="https://www.freepik.com/photos/pets" target="_blank">Pets photo created by freepik</a></li>
                     </ul>
                 </div>
             </div>
