--- a/mockup/html/about.html
+++ b/mockup/html/about.html
@@ -92,6 +92,7 @@
                         <li><a class="link-secondary" href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
                         <li><a class="link-secondary" href="https://jquery.com/" target="_blank">Jquery</a></li>
                         <li><a class="link-secondary" href="https://fontawesome.com/" target="_blank">Font Awesome</a></li>
+                        <li><a class="link-secondary" href="https://www.freepik.com/photos/pets" target="_blank">Pets photo created by freepik</a></li>
                     </ul>
                 </div>
             </div>
