--- a/mockup/html/login.html
+++ b/mockup/html/login.html
@@ -61,6 +61,13 @@
                 <a href="sign_up.html">Not registered yet? Sign up!</a>
             </div>
         </div>
+        <br>
+        <div style="display: flex; justify-content: center;">
+            <div class="col-md-3" style="display: flex; justify-content: center;">
+                <button type="button" class="btn btn-dark">Get in!</a>
+            </div>
+        </div>
+
 
     </div>
 
