--- a/mockup/html/sign_up.html
+++ b/mockup/html/sign_up.html
@@ -59,9 +59,17 @@
 
         <div style="display: flex; justify-content: center;">
             <div class="col-md-3" style="display: flex; justify-content: center;">
-                <a href="login.html">Already have a registration? Login!</a>
+                <a href="login.html">Already have a registration? Log in!</a>
             </div>
         </div>
+
+        <br>
+        <div style="display: flex; justify-content: center;">
+            <div class="col-md-3" style="display: flex; justify-content: center;">
+                <button type="button" class="btn btn-dark">Get in!</a>
+            </div>
+        </div>
+
 
     </div>
 
